--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments
+gas-reports.txt
+coverage.json
