--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "devDependencies": {
         "@nomicfoundation/hardhat-toolbox": "^5.0.0",
         "dotenv": "^16.4.5",
-        "hardhat": "^2.22.3"
+        "hardhat": "^2.22.3",
+        "hardhat-gas-reporter": "^2.1.1",
+        "solidity-coverage": "^0.8.12"
+    },
+    "overrides": {
+        "@nomicfoundation/hardhat-toolbox": {
+            "hardhat-gas-reporter": "2.1.1"
+        }
     }
 }
